--- a/admin-mustache/package.json
+++ b/admin-mustache/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "admin-mustache",
-  "version": "0.0.0",
-  "private": true,
-  "scripts": {
-    "start": "node ./bin/www"
-  },
-  "dependencies": {
-    "body-parser": "~1.15.2",
-    "cookie-parser": "~1.4.3",
-    "debug": "~2.2.0",
-    "express": "~4.14.0",
-    "morgan": "~1.7.0",
-    "mustache-express": "^1.2.4",
-    "serve-favicon": "~2.3.0"
-  }
+    "name": "admin-mustache",
+    "version": "0.0.1",
+    "private": true,
+    "scripts": {
+        "start": "node ./bin/www"
+    },
+    "dependencies": {
+        "body-parser": "~1.15.2",
+        "cookie-parser": "~1.4.3",
+        "debug": "~2.2.0",
+        "express": "~4.14.0",
+        "handlebars": "^4.0.6",
+        "morgan": "~1.7.0",
+        "mustache-express": "^1.2.4",
+        "serve-favicon": "~2.3.0"
+    }
 }
